--- a/ios-starter/swift-starter/Podfile
+++ b/ios-starter/swift-starter/Podfile
@@ -1,10 +1,9 @@
 # FriendlyChat Codelab
 
 use_frameworks!
-platform :ios, '9.0'
+platform :ios, '13.0'
 
-pod 'Firebase/AdMob'
-pod 'Firebase/Analytics'
+pod 'Firebase', '10.6.0'
 pod 'Firebase/Auth'
 pod 'Firebase/Database'
 pod 'Firebase/RemoteConfig'
