--- a/ios-starter/swift-starter/Podfile
+++ b/ios-starter/swift-starter/Podfile
@@ -10,6 +10,7 @@ pod 'Firebase/RemoteConfig'
 pod 'Firebase/Storage'
 pod 'Firebase/Crashlytics'
 pod 'GoogleSignIn'
+pod 'FirebaseFirestore'
 
 target 'FriendlyChatSwift' do
 end
