We set our templateish

--- a/ios-starter/swift-starter/Podfile
+++ b/ios-starter/swift-starter/Podfile
@@ -11,6 +11,7 @@ pod 'Firebase/Storage'
 pod 'Firebase/Crashlytics'
 pod 'GoogleSignIn'
 pod 'FirebaseFirestore'
-
+pod 'RxSwift'
+pod 'RxCocoa'
 target 'FriendlyChatSwift' do
 end
